--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Project specific ignores
+.streamlit/secrets.toml
+
+# PYTHON GITIGNORE TEMPLATE
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
